src/App.css
/* ... */
.pipeselectlink:hover .fa-check {
  color: #fff;
}

.pipeselect-editlink {
  position: absolute;
  right: 10px;
  top: 3px;
  z-index: 2;
  border: 1px solid rgba(33, 35, 44, .24);
  background-color: #fff;
  padding: 1px 4px;
  border-radius: 4px;
  cursor: pointer;
}

.pipeselectlist li:hover .pipeselect-editlink {
  color: #21232c;
}

.pipeselectbtm {
  border-top: 1px solid rgba(33, 35, 44, .24);
}

.pipeselectbtm .pipeselectlink {
  justify-content: left;
}

.pipeselectlink .fa-grip-lines,
.pipeselectlink .fa-eye,
.pipeselectlink .fa-pencil {
  margin-right: 10px;
}

.pipeselect-infolink {
  text-decoration: none;
  color: #21232c;
  margin-left: 10px;
}

.pipeselectlink:hover .pipeselect-infolink {
  text-decoration: none;
  color: #fff;
}

.newpipeline {
  display: flex;
  align-items: center;
  text-decoration: none;
  cursor: pointer;
  color: #2b74da;
  padding: 5px 10px;
  border-radius: 4px;
  border: none;
  font-size: 14px;
  background-color: #fff;
}

.newpipeline:hover {
  text-decoration: none;
  background-color: #2b74da;
  color: #fff;
}

.newpipeline .fa-plus {
  margin-right: 10px;
}



/* Add Deal Model Popup */
.modalpopup .modalhead {
  background-color: #faf5eb;
  border-bottom: 1px solid #e4cb9a;
  padding: 12px 20px 12px 16px;
  border-radius: 4px 4px 0 0;
  align-items: center;
}

.modal-header .modal-title {
  padding-right: 15px;
  font-size: 16px;
  font-weight: bold;
}

.modalpopup .modalfoot {
  background-color: #faf5eb;
  border-top: 1px solid #e4cb9a;
  padding: 8px 16px 8px 16px;
  border-radius: 0 0 4px 4px;
}

.modalfoot .modalfootbar {
  display: flex;
  align-items: center;
}

/* .modalpopup .modalbody {padding-top: 0; padding-bottom: 0;} */
.modelfootcountcol {
  display: flex;
}

.modelformleft .col-sm-6 {
  width: 100%;
}

.modelformright {
  border-left: 1px solid rgba(33, 35, 44, .12);
}

.personname {
  font-weight: bold;
  text-transform: uppercase;
  position: relative;
}

.personname:after {
  content: '';
  position: absolute;
  right: 0;
  top: 50%;
  width: calc(100% - 70px);
  height: 1px;
  background-color: rgba(33, 35, 44, .12);
}

select.selectfield {
  border: 1px solid #dee2e6;
  height: 37px;
  width: 100%;
  border-radius: 4px;
  padding: 0 8px;
}

.addphone a {
  font-weight: bold;
  color: #21232c;
}



.pipelinestage-selector {
  display: flex;
  flex-grow: 1;
  position: relative;
  flex-flow: row nowrap;
  height: 6px;
  min-width: 240px;
  table-layout: fixed;
  width: 100%;
}

.pipelinestage {
  display: flex;
  flex-grow: 1;
  position: relative;
}

.pipelinestage {
  align-items: center;
  background-color: #6ca87d;
  color: #fff;
  cursor: pointer;
  flex-basis: 0;
  font: 450 12px / 18px "Inter", sans-serif;
  font-stretch: normal;
  font-style: normal;
  justify-content: center;
  letter-spacing: 0;
  text-align: center;
}

.pipelinestage-current~.pipelinestage {
  background-color: #e4cb9a;
  color: #21232c;
}

.pipelinestage:after {
  content: '';
  position: absolute;
  left: 0;
  top: 50%;
  width: 20px;
  height: 20px;
  background-color: #2d8647;
  border-radius: 50%;
  margin-top: -10px;
}

.pipelinestage-current~.pipelinestage:after {
  background-color: #c7b89c;
}

.pipelinestage:first-of-type {
  margin-left: 0;
  border-radius: 4px 0 0 4px;
  border-left: 0;
}

.pipelinestage:last-of-type {
  border-radius: 0 4px 4px 0;
}

.pipelinestage label {
  position: absolute;
  left: 0;
  top: 15px;
  color: #2d8647;
}

.pipelinestage-current~.pipelinestage>label {
  color: #21232c;
}

/* Campaigns Contact Page CSS*/
.contactlist-row {
  display: flex;
  flex-direction: column;
  height: 100%;
}

/* Pipedrive Box Code */
.pdstage-area {
  overflow: hidden auto;
  height: calc(100% - 64px);
  display: grid;
}

.pdstagearea-inner {
  padding: 0 12px;
  overflow: auto;
  position: relative;
}

/* .pdstage-area::-webkit-scrollbar {width: 10px;}
.pdstage-area::-webkit-scrollbar-track {background-color: #e4e4e4; border-radius: 100px;}
.pdstage-area::-webkit-scrollbar-thumb {border-radius: 100px; background-color:#211c52; box-shadow: inset 2px 2px 5px 0 rgba(#fff, 0.5);} */

.toolbutton-grprow {
  display: flex;
  align-items: center;
}

.toolbutton-group {
  display: flex;
  margin-right: 10px;
  ;
}

.toolbutton-group a {
  display: inline-block;
}

.stageaction-editrow {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.actiondealname {
  display: flex;
  align-items: center;
}

.actiondealname label {
  display: flex;
  white-space: nowrap;
  margin-right: 10px;
}

.actiondealname .form-control {
  height: 32px;
  font-size: 14px;
}

.colactionbtn {
  display: flex;
  align-items: center;
}

.stageaction-editrow .btn-primary {
  margin-left: 10px;
}

.stageaction-editrow .colactionbtnrow {
  align-items: center;
  margin-left: 10px;
}

.colactionbtnrow .ellipsis-btn {
  margin-left: 10px;
}

.dealprobainfo .editstage-checkbox {
  flex: inherit;
}

.dealprobainfo {
  display: flex;
  align-items: center;
}

.probinfobtn {
  background-color: inherit;
}

.colactionbtnrow .btn {
  height: 32px;
  padding: 4px 10px;
  font-size: 14px;
}

.pdstage-row {
  display: flex;
  height: auto;
}

.pdstage-col {
  min-width: 0;
  display: flex;
  flex-direction: column;
  flex-basis: 100%;
  background-color: #f5f5f6;
  padding: 0 0 8px 0;
  margin-left: 8px;
}

.pdstage-col:first-child {
  margin-left: 0;
}

.pdstage-header {
  display: flex;
  align-items: flex-start;
  -webkit-box-pack: justify;
  justify-content: space-between;
  position: sticky;
  top: -1px;
  min-width: 45px;
  z-index: 1;
  flex-direction: column;
  background-color: #f5f5f6;
}

.pdstage-head {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 8px;
  width: 100%;
  overflow: hidden;
  font-size: 16px;
  font-weight: 600;
  height: 40px;
  border-top: 3px solid #3f3f3f;
  border-radius: 3px 3px 0 0;
  background-color: #eaeaea;
}
/* ... */

